--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
   scroll-behavior: smooth;
 }
 
+
 @layer base {
   body {
     @apply font-inter;
@@ -21,7 +22,7 @@
   }
 
   .head-text {
-    @apply mt-4 text-6xl leading-[72px] font-bold tracking-[-1.2px] text-gray-900;
+    @apply mt-4 text-6xl leading-[72px] font-bold tracking-[-1.2px] text-blue-900;
   }
 
   .section-text {
@@ -149,4 +150,12 @@
   .searchbar-btn {
     @apply bg-gray-900 border border-gray-900 rounded-lg shadow-xs px-5 py-3 text-white text-base font-semibold hover:opacity-90 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
   }
+
+  @layer components {
+    .dark-mode-icon {
+      filter: brightness(0) invert(1); /* This will invert the colors for the icon */
+    }
+  }
+  
+  
 }
